＜アプリ名の変更とそれに合わせた修正＞ ・アプリ名をSimple Isvest｜シンプル・インベストに変更 ・ログイン画面にログインをイメージする画像を表示するように変更 ・新規登録画面のカラーを緑から青に変更しアプリ全体のイメージカラーを青に統一

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "realestate-management-frontend",
+  "name": "simple-isvest",
+  "description": "Simple Isvest - 不動産投資管理システム",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:8080",
