--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "不動産投資管理",
-  "name": "不動産投資管理システム",
+  "name": "Simple Isvest｜シンプル・インベスト",
+  "short_name": "Simple Isvest",
   "icons": [
     {
       "src": "favicon.ico",
