--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Simple Isvest - 不動産投資管理システム",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "proxy": "http://localhost:8080",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
