＜デプロイ準備＞ ・アプリ名をSimple IsvestからSimple iSvestに変更

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-isvest",
-  "description": "Simple Isvest - 不動産投資管理システム",
+  "description": "Simple iSvest - 不動産投資管理システム",
   "version": "0.1.0",
   "private": true,
   "homepage": ".",
