＜アプリ名＞ ・アプリ名の読み方変更に合わせた各所修正

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Simple iSvest｜シンプル・インベスト",
+  "name": "Simple iSvest｜シンプル・イズベスト",
   "short_name": "Simple iSvest",
   "icons": [
     {
